Added solution to HW 2 Problem 2

--- a/Quantum-Physics-I/Problem-Set-2.ipynb
+++ b/Quantum-Physics-I/Problem-Set-2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11eaf1c1",
+   "id": "4536b5e9",
    "metadata": {},
    "source": [
     "#### Vars"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fd28934",
+   "id": "62ee005d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7029c066",
+   "id": "ee5e9e02",
    "metadata": {},
    "source": [
     "#### Equations"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "854bfa06",
+   "id": "efd2c1d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3538a05a",
+   "id": "13ce3fbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b5d291",
+   "id": "c97a4598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "477bc50b",
+   "id": "e5f5ca1c",
    "metadata": {},
    "source": [
     "#### Solving"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "322d0046",
+   "id": "10599935",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de3066be",
+   "id": "bae7e2c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95395614",
+   "id": "dc051a7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33b41aa4",
+   "id": "04f9c813",
    "metadata": {},
    "source": [
     "For the open ocean, $h$ will be very large."
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07da663f",
+   "id": "eb5a8b1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0ff1d77",
+   "id": "4990c6eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80a95527",
+   "id": "16cb392d",
    "metadata": {},
    "source": [
     "### Part B"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c47e071",
+   "id": "d3a901e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b769b0c",
+   "id": "73e96071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbd5ae33",
+   "id": "77a513ed",
    "metadata": {},
    "source": [
     "Since the velocities are decreasing, the energy must go into wave amplitude."
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "793ff24f",
+   "id": "8bbb8a02",
    "metadata": {},
    "source": [
     "### Part C"
@@ -216,16 +216,110 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a912474",
+   "id": "743a5e67",
    "metadata": {},
    "source": [
     "The surfer is at a 0 amplitude point of the group velocity envelope."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47fbb176",
+   "metadata": {},
+   "source": [
+    "## Problem 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e96c406",
+   "metadata": {},
+   "source": [
+    "### Part A"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51170200",
+   "id": "147279de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy.stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7285c83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = sympy.stats.Die('s',12)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3cd0454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.stats.E(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a979cbd2",
+   "metadata": {},
+   "source": [
+    "### Part B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dd23679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.sqrt(sympy.stats.variance(s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e784bab0",
+   "metadata": {},
+   "source": [
+    "### Part C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "006f5ffb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s2 = sympy.stats.Die('p',12)\n",
+    "sympy.stats.E(s+s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9043dcf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sympy.sqrt(sympy.stats.variance(s+s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54225067",
    "metadata": {},
    "outputs": [],
    "source": []
