--- a/Quantum-Physics-I/Problem-Set-2.ipynb
+++ b/Quantum-Physics-I/Problem-Set-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b9f21039",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "62ee005d",
    "metadata": {},
    "outputs": [],
@@ -64,10 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "efd2c1d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle v_{p}{\\left(k \\right)} = \\frac{\\omega{\\left(k \\right)}}{k}$"
+      ],
+      "text/plain": [
+       "Eq(v_p(k), omega(k)/k)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phase_velocity = (v_p, omega/k)\n",
     "sympy.Eq(*phase_velocity)"
@@ -75,10 +89,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "13ce3fbf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle v_{g}{\\left(k \\right)} = \\frac{d}{d k} \\omega{\\left(k \\right)}$"
+      ],
+      "text/plain": [
+       "Eq(v_g(k), Derivative(omega(k), k))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "group_velocity = (v_g, omega.diff(k))\n",
     "sympy.Eq(*group_velocity)"
@@ -86,10 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c97a4598",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\omega^{2}{\\left(k \\right)} = g k \\tanh{\\left(h k \\right)}$"
+      ],
+      "text/plain": [
+       "Eq(omega(k)**2, g*k*tanh(h*k))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dispertion = (omega**2, g * k * sympy.tanh(k*h))\n",
     "sympy.Eq(*dispertion)"
@@ -105,10 +147,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "10599935",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{omega(k): -sqrt(k)*sqrt(g*tanh(h*k)), v_p(k): -sqrt(g*tanh(h*k))/sqrt(k)},\n",
+       " {omega(k): sqrt(k)*sqrt(g*tanh(h*k)), v_p(k): sqrt(g*tanh(h*k))/sqrt(k)}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sol = sympy.solve(\n",
     "    map(lambda x: sympy.Eq(*x), [\n",
@@ -123,20 +177,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bae7e2c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle v_{p}{\\left(k \\right)} = \\frac{\\sqrt{g \\tanh{\\left(h k \\right)}}}{\\sqrt{k}}$"
+      ],
+      "text/plain": [
+       "Eq(v_p(k), sqrt(g*tanh(h*k))/sqrt(k))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sympy.Eq(v_p, sol[-1][v_p])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dc051a7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle v_{g}{\\left(k \\right)} = \\frac{\\sqrt{g \\tanh{\\left(h k \\right)}} \\left(\\frac{h k}{\\sinh{\\left(2 h k \\right)}} + \\frac{1}{2}\\right)}{\\sqrt{k}}$"
+      ],
+      "text/plain": [
+       "Eq(v_g(k), sqrt(g*tanh(h*k))*(h*k/sinh(2*h*k) + 1/2)/sqrt(k))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v_g_gravity = group_velocity[-1].subs(sol[-1]).doit().simplify()\n",
     "sympy.Eq(group_velocity[0], v_g_gravity)"
@@ -152,20 +234,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "eb5a8b1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle v_{p}{\\left(k \\right)} = \\frac{\\sqrt{g}}{\\sqrt{k}}$"
+      ],
+      "text/plain": [
+       "Eq(v_p(k), sqrt(g)/sqrt(k))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sympy.Eq(v_p, sympy.limit(phase_velocity[1].subs(sol[-1]), h, sympy.oo)).simplify()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4990c6eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle v_{g}{\\left(k \\right)} = \\frac{\\sqrt{g}}{2 \\sqrt{k}}$"
+      ],
+      "text/plain": [
+       "Eq(v_g(k), sqrt(g)/(2*sqrt(k)))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sympy.Eq(v_g, sympy.limit(v_g_gravity, h, sympy.oo)).simplify()"
    ]
@@ -180,20 +290,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d3a901e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle v_{p}{\\left(k \\right)} = 0$"
+      ],
+      "text/plain": [
+       "Eq(v_p(k), 0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sympy.Eq(v_p, sympy.limit(phase_velocity[1].subs(sol[-1]), h, 0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "73e96071",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle v_{g}{\\left(k \\right)} = 0$"
+      ],
+      "text/plain": [
+       "Eq(v_g(k), 0)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sympy.Eq(v_g, sympy.limit(v_g_gravity, h, 0))"
    ]
@@ -240,8 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "147279de",
+   "execution_count": 13,
+   "id": "e9bf8145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,10 +388,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b7285c83",
+   "execution_count": 14,
+   "id": "d6521254",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle s$"
+      ],
+      "text/plain": [
+       "s"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = sympy.stats.Die('s',12)\n",
     "s"
@@ -261,17 +413,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f3cd0454",
+   "execution_count": 15,
+   "id": "a1814cda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{13}{2}$"
+      ],
+      "text/plain": [
+       "13/2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sympy.stats.E(s)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a979cbd2",
+   "id": "1bd48c2d",
    "metadata": {},
    "source": [
     "### Part B"
@@ -279,17 +445,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0dd23679",
+   "execution_count": 16,
+   "id": "a0b172d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\sqrt{429}}{6}$"
+      ],
+      "text/plain": [
+       "sqrt(429)/6"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sympy.sqrt(sympy.stats.variance(s))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e784bab0",
+   "id": "99a17e25",
    "metadata": {},
    "source": [
     "### Part C"
@@ -297,10 +477,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "006f5ffb",
+   "execution_count": 17,
+   "id": "eecc6427",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 13$"
+      ],
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s2 = sympy.stats.Die('p',12)\n",
     "sympy.stats.E(s+s2)"
@@ -308,18 +502,364 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9043dcf3",
+   "execution_count": 18,
+   "id": "966ee3d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\sqrt{858}}{6}$"
+      ],
+      "text/plain": [
+       "sqrt(858)/6"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sympy.sqrt(sympy.stats.variance(s+s2))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e16e6d36",
+   "metadata": {},
+   "source": [
+    "## Problem 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da8e768d",
+   "metadata": {},
+   "source": [
+    "### Part A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "56e7109c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = sympy.symbols('x')\n",
+    "psi = sympy.symbols('psi', cls=sympy.Function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7da5f0a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\int\\limits_{-\\infty}^{\\infty} \\left|{\\psi{\\left(x \\right)}}\\right|^{2}\\, dx = 1$"
+      ],
+      "text/plain": [
+       "Eq(Integral(Abs(psi(x))**2, (x, -oo, oo)), 1)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalization_condition = sympy.Eq(sympy.Integral(sympy.Abs(psi(x))**2, (x, -sympy.oo, sympy.oo)), 1)\n",
+    "normalization_condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9feea3fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, u, a, b = sympy.symbols('f, u, a, b', cls=sympy.Wild)\n",
+    "\n",
+    "integral_dimension = (sympy.Integral(f, (u, a, b)), f * u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "649d65c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy.physics import units"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d3e522e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\Psi$"
+      ],
+      "text/plain": [
+       "Psi"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "psi_dim = sympy.symbols('Psi', real=True)\n",
+    "psi_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bbbf85d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dims = {\n",
+    "    x: units.length,\n",
+    "    psi(x): psi_dim\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9656c9e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\Psi^{2} \\operatorname{Dimension}\\left(length\\right) = 1$"
+      ],
+      "text/plain": [
+       "Eq(Psi**2*Dimension(length, L), 1)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalization_condition_dim = normalization_condition.replace(*integral_dimension).subs(dims)\n",
+    "normalization_condition_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e7ede211",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{Dimension(Psi): 2, Dimension(length, L): 1}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lhs_dims = units.systems.si.dimsys_SI.get_dimensional_dependencies(normalization_condition_dim.lhs)\n",
+    "rhs_dims = units.systems.si.dimsys_SI.get_dimensional_dependencies(normalization_condition_dim.rhs)\n",
+    "lhs_dims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e74b14d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{Psi: Dimension(sqrt(1/length))}]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    normalization_condition_dim, \n",
+    "    (psi_dim,), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "591a3bce",
+   "metadata": {},
+   "source": [
+    "### Part B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "25589a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\tilde{\\psi}{\\left(k \\right)}$"
+      ],
+      "text/plain": [
+       "\\tilde{\\psi}(k)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = sympy.symbols('k')\n",
+    "psi_ft = sympy.symbols(r'\\tilde{\\psi}', cls=sympy.Function)\n",
+    "psi_ft(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8a7d6623",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\tilde{\\Psi}$"
+      ],
+      "text/plain": [
+       "\\tilde{\\Psi}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "psi_ft_dim = sympy.symbols(r'\\tilde{\\Psi}', real=True)\n",
+    "psi_ft_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9efbca8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dims = {\n",
+    "    k: 1/units.length,\n",
+    "    psi_ft(k): psi_ft_dim\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "0894398f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\tilde{\\Psi}^{2} \\operatorname{Dimension}\\left(\\frac{1}{length}\\right) = 1$"
+      ],
+      "text/plain": [
+       "Eq(\\tilde{\\Psi}**2*Dimension(1/length), 1)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalization_condition_dim = normalization_condition.replace(*integral_dimension).subs({x:k, psi(x):psi_ft(k)}).subs(dims)\n",
+    "normalization_condition_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8721bb0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{Dimension(\\tilde{\\Psi}): 2, Dimension(length, L): -1}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lhs_dims = units.systems.si.dimsys_SI.get_dimensional_dependencies(normalization_condition_dim.lhs)\n",
+    "rhs_dims = units.systems.si.dimsys_SI.get_dimensional_dependencies(normalization_condition_dim.rhs)\n",
+    "lhs_dims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "6dfbc6c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{\\tilde{\\Psi}: Dimension(sqrt(length))}]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol = sympy.solve(\n",
+    "    normalization_condition_dim, \n",
+    "    (psi_ft_dim,), \n",
+    "    dict=True\n",
+    ")\n",
+    "sol"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54225067",
+   "id": "08c945b1",
    "metadata": {},
    "outputs": [],
    "source": []
